--- a/index.html
+++ b/index.html
@@ -160,13 +160,15 @@
     </section><!-- /Hero Section -->
 
     <!--About Section-->
-    <section id="about" class="section-black">
+    <section id="about" class="section-black py-5">
+        <!-- Section Title -->
       <div class="section-title">
         <div class="container content-wrap" data-aos="fade-up">
           <div class="section-title">
             <h1>ABOUT</h1>
+          </div>
 
-          </div><!-- End Section Title -->
+          <!-- Profile Picture -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
               <div class="holo-static">
@@ -174,7 +176,9 @@
                 <div class="grain"></div>
               </div>
             </div>
-            <div class="col-lg-7 content">
+
+            <!-- Content and Subtitle-->
+            <div class="col-lg-7 content" data-aos="fade-up">
               <h2>Sasha Cheek is a tech program manager and freelance science writer, with a hunger to
                 demystify engineering and science through storytelling.</h2>
               <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -188,17 +192,16 @@
     </section><!-- /About Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section dark-background"
-      style="background:url('assets/img/Nick_Fancher_Unplash_Cyberbunk2077.png') no-repeat center center / cover !important; background-size:cover;"
-      alt="" data-aos="fade-in">
-
-      <div class="container">
+    <section id="services" class="section-black py-5">
+      <!-- Title Banner -->
+      <div class="title-banner small" data-aos="fade-up" style="--title-img:url('/assets/img/headers/cyberpunk-2077-about-image.webp');">
         <!-- Section Title -->
         <div class="section-title" data-aos="fade-up">
           <h1>SERVICES</h1>
           <h2 class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
             organizations communicate clearly, streamline integrations, and strengthen engineering practices.</h2>
-        </div><!-- End Section Title -->
+        </div>
+      </div>
 
         <!-- Services Grid -->
         <div class="services-grid" data-aos="fade-up">
@@ -231,13 +234,16 @@
     </section><!-- /Services Section -->
 
     <!-- Resume Section -->
-    <section id="resume" class="resume section-black">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h1>RESUME</h1>
-        <h2 class="framed-subtitle">Experience and technical expertise at a glance.</h2>
-      </div><!-- End Section Title -->
+    <section id="resume" class="resume section-black py-5">
+      <!-- Title Banner -->
+      <div class="title-banner small" data-aos="fade-up"
+        style="--title-img:url('/assets/img/headers/green-neodymium-magnet-phenomenon.webp');">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h1>RESUME</h1>
+          <h2 class="framed-subtitle">Experience and technical expertise at a glance.</h2>
+        </div>
+      </div>
 
       <!-- Neon Framed Resume Body -->
       <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
@@ -350,22 +356,26 @@
 
     <!-- Notes from the Sandbox Blog Section -->
     <section id="blog" class="blog section-black py-5">
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h1>NOTES FROM THE SANDBOX:<br><i>A Writer-Engineer's Log</i></h1>
-        <h2 class="framed-subtitle">Tracing my beginnings as a writer-engineer—learning out loud, one build and
-          paragraph at
-          a time.</h2>
+      <!-- Title Banner -->
+      <div class="title-banner small" data-aos="fade-up"
+        style="--title-img:url('/assets/img/headers/desk-with-computer-it-placed-front-window.webp');">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h1>NOTES FROM THE SANDBOX:<br><i>A Writer-Engineer's Log</i></h1>
+          <h2 class="framed-subtitle">Tracing my beginnings as a writer-engineer—learning out loud, one build and
+            paragraph at
+            a time.</h2>
+        </div>
       </div>
       <!-- End Section Subtitle -->
 
       <!-- Slider Subsection -->
       <section id="slider" class="slider section-black">
-
+        <!-- Slider Container Main -->
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="swiper init-swiper">
-
+            <!-- Swiper JS Script -->
             <script type="application/json" class="swiper-config">
             {
               "loop": true,
@@ -387,6 +397,7 @@
             }
           </script>
 
+            <!-- Blog Swiper Wrapper -->
             <div class="swiper-wrapper">
 
               <div class="swiper-slide" style="background-image: url('assets/img/blog/pic3-blog-01.jpg');">
@@ -428,8 +439,8 @@
 
       </section><!-- /Slider Subsection -->
 
+      <!-- Blog Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row justify-content-center">
           <!-- ARTICLE CARD 1 -->
           <div class="col-md-4 mb-4">
@@ -481,14 +492,19 @@
 
     <!-- Featured Writing Section -->
     <section id="writing" class="writing section-black py-5">
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h1>PUBLISHED WORK</h1>
-        <h2 class="framed-subtitle">Published work in science and technology.</h2>
+      <!-- Title Banner -->
+      <div class="title-banner small" data-aos="fade-up"
+        style="--title-img:url('/assets/img/headers/depressing-blue-monday-composition.webp');">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <!-- Subtitle -->
+          <h1>PUBLISHED WORK</h1>
+          <h2 class="framed-subtitle">Published work in science and technology.</h2>
+        </div>
       </div>
+
       <!-- Featured Writing Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row justify-content-center">
           <!-- ARTICLE CARD 1 -->
           <div class="col-md-4 mb-4">
@@ -538,19 +554,23 @@
 
     <!-- Tech Portfolio Section -->
     <section id="portfolio" class="portfolio section-black" data-aos="fade-in">
+      <!-- Title Banner -->
+      <div class="title-banner small" data-aos="fade-up"
+        style="--title-img:url('/assets/img/headers/flat-lay-circuit-board-with-capacitors.webp');">
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+          <h1>TECH<br>PORTFOLIO</h1>
+          <!--Subtitle -->
+          <h2 class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
+            projects. More projects coming soon!</h2>
+        </div>
+      </div>
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h1>TECH<br>PORTFOLIO</h1>
-        <h2 class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
-          projects. More projects coming soon!</h2>
-      </div><!-- End Section Title -->
-
-      <section id="portfolio" class="portfolio-section" data-aos="fade-in">
-
+      <!-- Tech Portfolio Container-->
+      <section id="portfolio" class="portfolio section-black py-5" data-aos="fade-in">
         <!-- Project 1 Row 1 -->
         <div class="portfolio-item" data-aos="fade-up">
-          <iframe title="Healthcare Data Breaches by State (Total Number, October 2024 - October 2025"
+          <iframe title="Healthcare Data Breaches by State | Oct 2024 - 2025"
             aria-label="Choropleth map" id="datawrapper-chart-ZT1co" src="https://datawrapper.dwcdn.net/ZT1co/1/"
             scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="574"
             data-external="1"></iframe>
@@ -598,10 +618,13 @@
 
       <!--TESTIMONIALS TITLE-->
       <section id="testimonials" class="testimonials section-black py-5">
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h1>TESTIMONIALS</h1>
-          <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
+        <!-- Title Banner -->
+        <div class="title-banner small" data-aos="fade-up" style="--title-img:url('/assets/img/headers/testimonials-background-image.webp');">
+          <!-- Section Title -->
+          <div class="container section-title" data-aos="fade-up">
+            <h1>TESTIMONIALS</h1>
+            <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
+          </div>
         </div>
 
         <script>
@@ -687,15 +710,19 @@
 
       <!-- Contact Section -->
       <section id="contact" class="contact section-black">
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h1>CONTACT</h1>
-          <h2 class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm
-            always
-            happy
-            to connect. Send me a
-            message, and I will respond within 24-48 hours.</h2>
-        </div><!-- End Section Title -->
+        <!-- Title Banner -->
+        <div class="title-banner small" data-aos="fade-up" style="--title-img:url('/assets/img/headers/cityscape-image.webp');">
+          <!-- Section Title -->
+          <div class="container section-title" data-aos="fade-up">
+            <h1>CONTACT</h1>
+            <!-- Subtitle -->
+            <h2 class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm
+              always
+              happy
+              to connect. Send me a
+              message, and I will respond within 24-48 hours.</h2>
+          </div>
+        </div>
 
         <!-- Contact Container -->
         <div class="container" data-aos="fade-up" data-aos-delay="100">
