--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-65ZF460S6R"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-65ZF460S6R');
-  </script>
+  <!-- Zara (Web Tags) from Cloudflare -->
+  <script src="/cdn-cgi/zaraz/i.js" referrerpolicy="origin"></script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
