scheek-HTML Cleanup-10.27.25
DotGothic16 text deleted. About section's h3 text edited.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <!-- DELETE DOTGOTHIC 16 FONT LATER-->
-  <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -183,8 +181,7 @@
 
             <!-- Content and Subtitle-->
             <div class="col-lg-7 content" data-aos="fade-up">
-              <h2>Sasha Cheek is a tech program manager and freelance science writer, with a hunger to
-                demystify engineering and science through storytelling.</h2>
+              <h2>Sasha Cheek is a tech program manager and freelance science writer with a hunger for demystifying engineering and science through storytelling.</h2>
               <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
                   program management roles at Microsoft and Indeed. In addition to working full-time in technology,
