--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         <!-- Social Media Links -->
         <div class="social-links">
           <a href="https://substack.com/@sashacheek"><i class="bi bi-substack"></i></a>
-          <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
+          <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
+          <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
           <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
@@ -664,7 +665,7 @@
               <div class="swiper-slide">
                 <article class="t-card">
                   <img
-                    src="https://media.licdn.com/dms/image/v2/D5603AQEibYrTk8suiA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1687087039525?e=1761782400&v=beta&t=MG7kjd4nd9Lk5s_lKX1opAb8gAUUS6P1s6HmVxCU7ao"
+                    src="/assets/img/testimonials/danielm_testimonialpic.jpg"
                     alt="Portrait of Daniel M. Chin" class="t-avatar">
                   <h3 class="t-name">Daniel M. Chin, PMP</h3>
                   <p class="t-role">Program Manager at Microsoft</p>
@@ -689,7 +690,7 @@
               <div class="swiper-slide">
                 <article class="t-card">
                   <img
-                    src="https://media.licdn.com/dms/image/v2/D5603AQEoS37JgAcEKw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1731534579150?e=1761782400&v=beta&t=XOFElMatfSz274LVnHA3fx1YvVkVCEBuJm8IldSTupo"
+                    src="/assets/img/testimonials/susan_testimonialpic.jpg"
                     alt="Portrait of Susan Walker" class="t-avatar">
                   <h3 class="t-name">Susan Walker</h3>
                   <p class="t-role">Scrum Master at Abercrombie &amp; Fitch</p>
@@ -800,7 +801,8 @@
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://substack.com/@sashacheek"><i class="bi bi-substack"></i></a>
-        <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
+        <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
         <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
