--- a/index.html
+++ b/index.html
@@ -410,10 +410,10 @@
                 </div>
               </div>
 
-              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-2.PNG');">
+              <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-2.jpg');">
                 <div class="content">
-                  <h2><a href="#" data-comingsoon>Blog Entry 2 - TBA</a></h2>
-                  <p>Release Date: Nov 3, 2025</p>
+                  <h2><a href="/blog/2025-11-02-random-notes.html">System Overload: Troubleshooting Burnout in the Human Brain Stack</a></h2>
+                  <p>Nov 2, 2025</p>
                 </div>
               </div>
 
@@ -462,13 +462,12 @@
           <!-- ARTICLE CARD 2 -->
           <div class="col-md-4 mb-4">
             <div class="article-card">
-              <img src="https://images.pexels.com/photos/1425146/pexels-photo-1425146.jpeg?w=1920" alt="Blog Entry 2"
+              <img src="/assets/img/blog/post-slide-2.jpg" alt="Blog Entry 2"
                 class="article-img">
               <div class="article-content">
-                <h4 class="article-title">Blog Entry 2</h4>
-                <p class="article-date">Release Date: Nov 3, 2025</p>
-                <a href="https://example.com/coming-soon" class="btn btn-neon block-for-now" aria-disabled="true"
-                  data-comingsoon>Coming Soon</a>
+                <h4 class="article-title">System Overload: Troubleshooting Burnout in the Human Brain Stack</h4>
+                <p class="article-date">Nov 2, 2025</p>
+                <a href="/blog/2025-11-02-random-notes.html" class="btn btn-neon">Read Article</a>
 
               </div>
             </div>
