--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/tech-home-office-background.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/tech-home-office-background.webp" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
@@ -790,7 +790,7 @@
   </main>
 
   <!-- Footer -->
-  <footer id="footer" class="footer" data-aos="fade-up" data-aos-delay="100" style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center / cover !important;
+  <footer id="footer" class="footer" data-aos="fade-up" data-aos-delay="100" style="background:url('assets/img/cyberpunk-footer.webp') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <h3 class="sitename">SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</h3>
