--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
         <ul>
           <li><a href="#hero" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
+          <li><a href="#services">SERVICES</a></li>
           <li><a href="#resume">RESUME</a></li>
           <li><a href="#blog">BLOG</a></li>
-          <li><a href="#writing">PUBLISHED WORK</a></li>
+          <li><a href="#published-work">PUBLISHED WORK</a></li>
           <li><a href="#portfolio">TECH PORTFOLIO</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
@@ -493,7 +494,7 @@
     <!-- End Notes from the Sandbox Blog Section -->
 
     <!-- Featured Writing Section -->
-    <section id="writing" class="writing section-black py-5">
+    <section id="published-work" class="published-work section-black py-5">
       <!-- Title Banner -->
       <div class="title-banner small" data-aos="fade-up"
         style="--title-img:url('/assets/img/headers/depressing-blue-monday-composition.webp');">
