--- a/tech-portfolio/web-dev-case-study-portfolio-details.html
+++ b/tech-portfolio/web-dev-case-study-portfolio-details.html
@@ -77,9 +77,10 @@
         <ul>
           <li><a href="/#hero" class="active">HOME</a></li>
           <li><a href="/#about">ABOUT</a></li>
+          <li><a href="#services">SERVICES</a></li>
           <li><a href="/#resume">RESUME</a></li>
           <li><a href="/#blog">BLOG</a></li>
-          <li><a href="/#writing">PUBLISHED WORK</a></li>
+          <li><a href="/#published-work">PUBLISHED WORK</a></li>
           <li><a href="/#portfolio">TECH PORTFOLIO</a></li>
           <li><a href="/#contact">CONTACT</a></li>
         </ul>
