--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </section><!-- /About Section -->
 
     <!-- Services Section -->
-    <section id="services" class="section-black py-5">
+    <section id="services" class="services section-black py-5">
       <!-- Title Banner -->
       <div class="title-banner small" data-aos="fade-up"
         style="--title-img:url('/assets/img/headers/cyberpunk-2077-about-image.webp');">
