--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 
             <!-- Content and Subtitle-->
             <div class="col-lg-7 content" data-aos="fade-up">
-              <h2>Sasha Cheek is a tech program manager and freelance science writer with a hunger for demystifying engineering and science through storytelling.</h2>
+              <h2>Sasha Cheek is a tech program manager and freelance science writer with a hunger for demystifying
+                engineering and science through storytelling.</h2>
               <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
                   program management roles at Microsoft and Indeed. In addition to working full-time in technology,
@@ -413,7 +414,8 @@
 
               <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-2.jpg');">
                 <div class="content">
-                  <h2><a href="/blog/2025-11-02-random-notes.html">System Overload: Troubleshooting Burnout in the Human Brain Stack</a></h2>
+                  <h2><a href="/blog/2025-11-02-random-notes.html">System Overload: Troubleshooting Burnout in the Human
+                      Brain Stack</a></h2>
                   <p>Nov 2, 2025</p>
                 </div>
               </div>
@@ -463,8 +465,7 @@
           <!-- ARTICLE CARD 2 -->
           <div class="col-md-4 mb-4">
             <div class="article-card">
-              <img src="/assets/img/blog/post-slide-2.jpg" alt="Blog Entry 2"
-                class="article-img">
+              <img src="/assets/img/blog/post-slide-2.jpg" alt="Blog Entry 2" class="article-img">
               <div class="article-content">
                 <h4 class="article-title">System Overload: Troubleshooting Burnout in the Human Brain Stack</h4>
                 <p class="article-date">Nov 2, 2025</p>
@@ -506,54 +507,74 @@
         </div>
       </div>
 
-      <!-- Featured Writing Container -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row justify-content-center">
-          <!-- ARTICLE CARD 1 -->
-          <div class="col-md-4 mb-4">
-            <div class="article-card">
-              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png"
-                alt="David Bowie’s Ode to Sci-Fi" class="article-img">
-              <div class="article-content">
-                <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
-                <p class="article-date">Published on Substack</p>
-                <a href="https://sashacheek.substack.com/p/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-                  target="_blank" class="btn btn-neon">Read Article</a>
-              </div>
-            </div>
-          </div>
+      <!-- Self-Published Articles -->
+      <div class="featured-title" data-aos="fade-up" data-aos-delay="100">
+        <h4 class="subheading">Featured Article</h4>
+      </div>
 
-          <!-- ARTICLE CARD 2 -->
-          <div class="col-md-4 mb-4">
-            <div class="article-card">
-              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love"
-                class="article-img">
-              <div class="article-content">
-                <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
-                <p class="article-date">Published on Substack</p>
-                <a href="https://sashacheek.substack.com/p/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
-                  target="_blank" class="btn btn-neon">Read Article</a>
-              </div>
-            </div>
-          </div>
-
-          <!-- ARTICLE CARD 3 -->
-          <div class="col-md-4 mb-4">
-            <div class="article-card">
-              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz"
-                alt="Dealing with Alzheimer’s" class="article-img">
-              <div class="article-content">
-                <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
-                <p class="article-date">Published on Substack</p>
-                <a href="https://sashacheek.substack.com/p/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
-                  target="_blank" class="btn btn-neon">Read Article</a>
-              </div>
-            </div>
-          </div>
+      <!-- Featured Story -->
+      <div class="featured-article">
+        <img src="assets/img/telepathic-music-image.webp" alt="Hackernoon feature" class="img-fluid">
+        <div class="article-content">
+          <h3>How Telepathic Music Inspires Disabled Creatives</h3>
+          <p class="pub-info"><strong>Published on Hackernoon — Featured Story</strong></p>
+          <p class="article-date">Nov 3, 2025</p>
+          <p class="article-summary">
+            Exploring the world of brain-computer interface (BCI) technology for disabled creatives and
+            the battle against neurodegenerative disorders.
+          </p>
+          <a href="https://hackernoon.com/how-telepathic-music-inspires-disabled-creatives" class="btn btn-neon"
+            target="_blank" rel="noopener">Read Article</a>
         </div>
       </div>
+      <!-- End Featured Story -->
+
+      <!-- SELF-PUBLISHED ARTICLES -->
+        <div class="featured-title" data-aos="fade-up" data-aos-delay="100">
+          <h4 class="subheading">Self-Published Articles</h4>
+        </div>
+
+        <div class="article-list container" data-aos="fade-up" data-aos-delay="100">
+        <!-- ARTICLE CARD 1 -->
+        <div class="article-item">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png"
+            alt="David Bowie’s Ode to Sci-Fi" class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
+            <p class="article-date">Published on Substack - Oct 2025</p>
+            <a href="https://sashacheek.substack.com/p/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
+              target="_blank" class="btn btn-neon">Read Article</a>
+          </div>
+        </div>
+
+        <!-- ARTICLE CARD 2 -->
+        <div class="article-item">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love"
+            class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
+            <p class="article-date">Published on Substack - Oct 2025</p>
+            <a href="https://sashacheek.substack.com/p/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
+              target="_blank" class="btn btn-neon">Read Article</a>
+          </div>
+        </div>
+
+        <!-- ARTICLE CARD 3 -->
+        <div class="article-item">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz"
+            alt="Dealing with Alzheimer’s" class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
+            <p class="article-date">Published on Substack - Oct 2025</p>
+            <a href="https://sashacheek.substack.com/p/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
+              target="_blank" class="btn btn-neon">Read Article</a>
+          </div>
+        </div>
+
+      </div>
+
     </section>
-    <!-- End Featured Writing Section -->
+    <!-- End Published Work Section -->
 
     <!-- Tech Portfolio Section -->
     <section id="portfolio" class="portfolio section-black" data-aos="fade-in">
@@ -661,9 +682,8 @@
               <!-- Slide 1 -->
               <div class="swiper-slide">
                 <article class="t-card">
-                  <img
-                    src="/assets/img/testimonials/danielm_testimonialpic.jpg"
-                    alt="Portrait of Daniel M. Chin" class="t-avatar">
+                  <img src="/assets/img/testimonials/danielm_testimonialpic.jpg" alt="Portrait of Daniel M. Chin"
+                    class="t-avatar">
                   <h3 class="t-name">Daniel M. Chin, PMP</h3>
                   <p class="t-role">Program Manager at Microsoft</p>
                   <div class="t-divider t-node" aria-hidden="true"></div>
@@ -686,9 +706,8 @@
               <!-- Slide 2 -->
               <div class="swiper-slide">
                 <article class="t-card">
-                  <img
-                    src="/assets/img/testimonials/susan_testimonialpic.jpg"
-                    alt="Portrait of Susan Walker" class="t-avatar">
+                  <img src="/assets/img/testimonials/susan_testimonialpic.jpg" alt="Portrait of Susan Walker"
+                    class="t-avatar">
                   <h3 class="t-name">Susan Walker</h3>
                   <p class="t-role">Scrum Master at Abercrombie &amp; Fitch</p>
                   <div class="t-divider t-node" aria-hidden="true"></div>
