scheek-blog-and-project-link-Updates-11.6.2025

--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@
 
               <div class="swiper-slide" style="background-image: url('assets/img/blog/pic3-blog-01.jpg');">
                 <div class="content">
-                  <h2><a href="/blog/2025-10-23-random-notes.html">Random Notes From an Emerging Writer's Desk</a></h2>
+                  <h2><a href="/blog/2025-10-23-random-notes-from-an-emerging-writers-desk/">Random Notes From an Emerging Writer's Desk</a></h2>
                   <p>Oct 23, 2025</p>
                 </div>
               </div>
 
               <div class="swiper-slide" style="background-image: url('assets/img/blog/post-slide-2.jpg');">
                 <div class="content">
-                  <h2><a href="/blog/2025-11-02-random-notes.html">System Overload: Troubleshooting Burnout in the Human
+                  <h2><a href="/blog/2025-11-02-system-overload-troubleshooting-burnout-in-the-human-brain-stack/">System Overload: Troubleshooting Burnout in the Human
                       Brain Stack</a></h2>
                   <p>Nov 2, 2025</p>
                 </div>
@@ -456,7 +456,7 @@
               <div class="article-content">
                 <h4 class="article-title">Random Notes From an Emerging Writer's Desk</h4>
                 <p class="article-date">Oct 23, 2025</p>
-                <a href="/blog/2025-10-23-random-notes.html" class="btn btn-neon">Read Article</a>
+                <a href="/blog/2025-10-23-random-notes-from-an-emerging-writers-desk/" class="btn btn-neon">Read Article</a>
 
               </div>
             </div>
@@ -469,7 +469,7 @@
               <div class="article-content">
                 <h4 class="article-title">System Overload: Troubleshooting Burnout in the Human Brain Stack</h4>
                 <p class="article-date">Nov 2, 2025</p>
-                <a href="/blog/2025-11-02-random-notes.html" class="btn btn-neon">Read Article</a>
+                <a href="/blog/2025-11-02-system-overload-troubleshooting-burnout-in-the-human-brain-stack/" class="btn btn-neon">Read Article</a>
 
               </div>
             </div>
