--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
             alt="David Bowie’s Ode to Sci-Fi" class="article-img">
           <div class="article-content">
             <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
-            <p class="article-date">Published on Substack - Oct 2025</p>
-            <a href="https://sashacheek.substack.com/p/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-              target="_blank" class="btn btn-neon">Read Article</a>
+            <p class="article-date">Published on Medium and Portfolio Site - Apr 11, 2024</p>
+            <a href="/writing/david-bowies-ode-to-sci-fi-and-space-science/" target="_blank" class="btn btn-neon">Read
+              Article</a>
           </div>
         </div>
 
@@ -744,7 +744,7 @@
           </div>
         </div>
       </section>
-
+      <!-- End Testimonials Section -->
 
       <!-- Contact Section -->
       <section id="contact" class="contact section-black">
